android to node connection

--- a/MeetUps_FrontEnd/app/src/main/AndroidManifest.xml
+++ b/MeetUps_FrontEnd/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.projetXML.meetups">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -23,7 +25,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".CreerCompte"></activity>
+        <activity android:name=".CreerCompte" android:exported="true"></activity>
 
     </application>
 
