--- a/MeetUps_FrontEnd/local.properties
+++ b/MeetUps_FrontEnd/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Fri Sep 09 18:29:40 EDT 2022
-sdk.dir=/Users/george/Library/Android/sdk
+sdk.dir=C:\\Users\\Ana Hernandez Smith\\AppData\\Local\\Android\\Sdk
