--- a/MeetUps_FrontEnd/local.properties
+++ b/MeetUps_FrontEnd/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Sep 09 18:29:40 EDT 2022
-sdk.dir=C:\\Users\\Ana Hernandez Smith\\AppData\\Local\\Android\\Sdk
+#Sun Sep 11 20:50:05 EDT 2022
+sdk.dir=C\:\\Users\\caven\\AppData\\Local\\Android\\Sdk
