--- a/MeetUps_FrontEnd/app/src/main/AndroidManifest.xml
+++ b/MeetUps_FrontEnd/app/src/main/AndroidManifest.xml
@@ -26,6 +26,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".CreerCompte" android:exported="true"></activity>
+        <activity android:name=".HomePage" android:exported="true"></activity>
+
 
     </application>
 
