--- a/MeetUps_FrontEnd/app/build.gradle
+++ b/MeetUps_FrontEnd/app/build.gradle
@@ -41,4 +41,7 @@ dependencies {
 
     //Pour l'animation
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+
+    //Pour imageview rond
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 }
